# icfp-contest-2015

./: .gitignore  ICFP.cabal  OPTIMIZATION  README  a.py  scores
cxx/: Makefile  icfp  main.cpp
haskell/: ICFP.cabal  Makefile  README
haskell/src/: Game.hs  Main.hs  MyPrelude.hs  Optimizer.hs  Solver.hs  SubmitBest.hs  Vis.hs
src/: DNA.hs  Game.hs  KMP.hs  Main.hs  MyPrelude.hs  Optimizer.hs  RNA.hs  Solver.hs  SubmitBest.hs  Vis.hs
