name:                ICFP
version:             2015
build-type:          Simple
cabal-version:       >=1.10

executable ICFP
  main-is:             Main.hs
  default-extensions:  TemplateHaskell, RankNTypes, NoMonomorphismRestriction, TypeFamilies, FlexibleContexts, FlexibleInstances
                     , LambdaCase, TupleSections, ViewPatterns, PatternSynonyms, UnicodeSyntax, OverloadedStrings
                     , BangPatterns
                     , DeriveGeneric, GeneralizedNewtypeDeriving, DeriveFunctor, DeriveFoldable, DeriveTraversable
  build-depends:       base >=4.8 && <4.9
                     , containers
                     , lens
                     , mtl
                     , vector
                     , bifunctors
                     , keys
                     , optparse-applicative
                     , monad-loops
                     , array
                     , bytestring
                     , deepseq
                     , deepseq-generics
                     , ansi-terminal
                     , base-unicode-symbols
                     , directory
                     , diagrams-lib, diagrams-svg
                     , blaze-html
                     , lucid-svg
                     , trifecta
                     , indentation
                     , Chart, Chart-diagrams, SVGFonts
                     , aeson
                     , wreq
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -funbox-strict-fields -Wall
                       -fno-warn-unused-binds
                       -fno-warn-unused-do-bind
                       -fno-warn-unused-imports
                       -fno-warn-unused-matches
                       -fno-warn-name-shadowing
